Fix deprecated newInstance in ExecutableBaseTest.java
test_framework/com/android/tradefed/testtype/binary/ExecutableBaseTest.java

Test: make
Test: UnitTests (local)

Bug: 145625254
Change-Id: I0e8ccfdbe229ec76f950f7c0f6025e81a76640dc