@@ -31,6 +31,7 @@ import com.android.tradefed.util.StreamUtil;
 
 import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
@@ -150,14 +151,17 @@ public abstract class ExecutableBaseTest
     private IRemoteTest getTestShard(String path) {
         ExecutableBaseTest shard = null;
         try {
-            shard = this.getClass().newInstance();
+            shard = this.getClass().getDeclaredConstructor().newInstance();
             OptionCopier.copyOptionsNoThrow(this, shard);
             // We approximate the runtime of each shard to be equal since we can't know.
             shard.mRuntimeHintMs = mRuntimeHintMs / shard.mBinaryPaths.size();
             // Set one binary per shard
             shard.mBinaryPaths.clear();
             shard.mBinaryPaths.add(path);
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (InstantiationException
+                | IllegalAccessException
+                | InvocationTargetException
+                | NoSuchMethodException e) {
             // This cannot happen because the class was already created once at that point.
             throw new RuntimeException(
                     String.format(
